--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Gallery</title>
+    <title>Home-The Gallery</title>
     <meta content="width=device-width, initial-scale=0.97" name="viewport" />
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <%- include('bootstrap') %>
